--- a/backend/Chart.yaml
+++ b/backend/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-name: nginx
+name: backend
 version: "0.2"
-description: frontend variables are placed in this chart
+description: backend variables are placed in this chart
 maintainers:
   - name: raghu_H
     email: raghu10indian@gmail.com
